Activate sirens 10 km